--- a/Student_Grade_Prediction.ipynb
+++ b/Student_Grade_Prediction.ipynb
@@ -73,16 +73,16 @@
           "height": 488
         },
         "id": "tZvxpUVH-AQ2",
-        "outputId": "f5438dc1-dfc2-4379-fffd-df094444d009"
+        "outputId": "17ecdb1b-f296-42fb-b8c7-7083f1f910f9"
       },
-      "execution_count": 165,
+      "execution_count": 196,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-686d048c-6ced-4a87-995c-bdcdc2cb2618\">\n",
+              "  <div id=\"df-ead18551-4b92-4b44-a227-07625fbdc280\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -454,7 +454,7 @@
               "</table>\n",
               "<p>395 rows × 26 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-686d048c-6ced-4a87-995c-bdcdc2cb2618')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ead18551-4b92-4b44-a227-07625fbdc280')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -505,12 +505,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-686d048c-6ced-4a87-995c-bdcdc2cb2618 button.colab-df-convert');\n",
+              "          document.querySelector('#df-ead18551-4b92-4b44-a227-07625fbdc280 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-686d048c-6ced-4a87-995c-bdcdc2cb2618');\n",
+              "          const element = document.querySelector('#df-ead18551-4b92-4b44-a227-07625fbdc280');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -549,7 +549,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 165
+          "execution_count": 196
         }
       ]
     },
@@ -1373,7 +1373,7 @@
       "metadata": {
         "id": "mBbFSmQeISfX"
       },
-      "execution_count": 181,
+      "execution_count": 197,
       "outputs": []
     },
     {
@@ -1384,19 +1384,19 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 270
+          "height": 206
         },
         "id": "B6j2u0bhIwVm",
-        "outputId": "64e53b8b-3cb1-4edc-fe9a-82f1b75666a3"
+        "outputId": "6c8c8279-986f-4cb8-d171-e0b98dcddfac"
       },
-      "execution_count": 182,
+      "execution_count": 194,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-77e39908-9324-4df3-85cd-dfdaec93be9a\">\n",
+              "  <div id=\"df-62fe1817-8942-4f9a-a790-f98bd03bd260\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1416,184 +1416,82 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>school</th>\n",
-              "      <th>sex</th>\n",
-              "      <th>age</th>\n",
-              "      <th>address</th>\n",
-              "      <th>famsize</th>\n",
-              "      <th>Pstatus</th>\n",
-              "      <th>Medu</th>\n",
-              "      <th>Fedu</th>\n",
-              "      <th>Mjob</th>\n",
-              "      <th>Fjob</th>\n",
-              "      <th>guardian</th>\n",
-              "      <th>traveltime</th>\n",
-              "      <th>studytime</th>\n",
-              "      <th>failures</th>\n",
-              "      <th>Ssupport</th>\n",
-              "      <th>Gsupport</th>\n",
-              "      <th>feespaid</th>\n",
-              "      <th>ecactivities</th>\n",
-              "      <th>internet</th>\n",
-              "      <th>freetime</th>\n",
-              "      <th>goout</th>\n",
-              "      <th>health</th>\n",
-              "      <th>absences</th>\n",
-              "      <th>G1</th>\n",
-              "      <th>G2</th>\n",
               "      <th>G3</th>\n",
+              "      <th>failures</th>\n",
+              "      <th>Medu</th>\n",
+              "      <th>age</th>\n",
+              "      <th>Fedu</th>\n",
+              "      <th>goout</th>\n",
+              "      <th>traveltime</th>\n",
+              "      <th>address</th>\n",
+              "      <th>sex</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
+              "      <td>6</td>\n",
               "      <td>0</td>\n",
-              "      <td>0</td>\n",
+              "      <td>4</td>\n",
               "      <td>18</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
               "      <td>4</td>\n",
-              "      <td>4</td>\n",
-              "      <td>0</td>\n",
-              "      <td>4</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>2</td>\n",
               "      <td>3</td>\n",
-              "      <td>2</td>\n",
-              "      <td>6</td>\n",
-              "      <td>5</td>\n",
-              "      <td>6</td>\n",
-              "      <td>6</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
+              "      <td>6</td>\n",
               "      <td>0</td>\n",
-              "      <td>0</td>\n",
+              "      <td>1</td>\n",
               "      <td>17</td>\n",
               "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
               "      <td>2</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>2</td>\n",
-              "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>1</td>\n",
               "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2</td>\n",
-              "      <td>2</td>\n",
-              "      <td>2</td>\n",
-              "      <td>4</td>\n",
-              "      <td>5</td>\n",
-              "      <td>5</td>\n",
-              "      <td>6</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
+              "      <td>10</td>\n",
+              "      <td>3</td>\n",
+              "      <td>1</td>\n",
               "      <td>15</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>2</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>2</td>\n",
-              "      <td>3</td>\n",
-              "      <td>1</td>\n",
               "      <td>0</td>\n",
               "      <td>1</td>\n",
               "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2</td>\n",
-              "      <td>10</td>\n",
-              "      <td>7</td>\n",
-              "      <td>8</td>\n",
-              "      <td>10</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
               "      <td>15</td>\n",
-              "      <td>1</td>\n",
               "      <td>0</td>\n",
-              "      <td>1</td>\n",
               "      <td>4</td>\n",
+              "      <td>15</td>\n",
               "      <td>2</td>\n",
               "      <td>1</td>\n",
-              "      <td>3</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>3</td>\n",
-              "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>4</td>\n",
-              "      <td>2</td>\n",
-              "      <td>15</td>\n",
-              "      <td>14</td>\n",
-              "      <td>15</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
+              "      <td>10</td>\n",
               "      <td>0</td>\n",
-              "      <td>0</td>\n",
+              "      <td>3</td>\n",
               "      <td>16</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
               "      <td>3</td>\n",
-              "      <td>3</td>\n",
-              "      <td>2</td>\n",
-              "      <td>2</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>2</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
               "      <td>1</td>\n",
               "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>2</td>\n",
               "      <td>1</td>\n",
-              "      <td>4</td>\n",
-              "      <td>4</td>\n",
-              "      <td>6</td>\n",
-              "      <td>10</td>\n",
-              "      <td>10</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-77e39908-9324-4df3-85cd-dfdaec93be9a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-62fe1817-8942-4f9a-a790-f98bd03bd260')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1644,12 +1542,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-77e39908-9324-4df3-85cd-dfdaec93be9a button.colab-df-convert');\n",
+              "          document.querySelector('#df-62fe1817-8942-4f9a-a790-f98bd03bd260 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-77e39908-9324-4df3-85cd-dfdaec93be9a');\n",
+              "          const element = document.querySelector('#df-62fe1817-8942-4f9a-a790-f98bd03bd260');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1671,18 +1569,16 @@
               "  "
             ],
             "text/plain": [
-              "   school  sex  age  address  famsize  ...  health  absences  G1  G2  G3\n",
-              "0       0    0   18        1        0  ...       2         6   5   6   6\n",
-              "1       0    0   17        1        0  ...       2         4   5   5   6\n",
-              "2       0    0   15        1        1  ...       2        10   7   8  10\n",
-              "3       0    0   15        1        0  ...       4         2  15  14  15\n",
-              "4       0    0   16        1        0  ...       4         4   6  10  10\n",
-              "\n",
-              "[5 rows x 26 columns]"
+              "   G3  failures  Medu  age  Fedu  goout  traveltime  address  sex\n",
+              "0   6         0     4   18     4      3           1        1    0\n",
+              "1   6         0     1   17     1      2           0        1    0\n",
+              "2  10         3     1   15     1      1           0        1    0\n",
+              "3  15         0     4   15     2      1           0        1    0\n",
+              "4  10         0     3   16     3      1           0        1    0"
             ]
           },
           "metadata": {},
-          "execution_count": 182
+          "execution_count": 194
         }
       ]
     },
@@ -1755,7 +1651,7 @@
       "metadata": {
         "id": "jQZH0Dkqtkas"
       },
-      "execution_count": 184,
+      "execution_count": 198,
       "outputs": []
     },
     {
@@ -1770,9 +1666,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4ed57840-0f2f-4273-ce10-9129c122ab8b"
+        "outputId": "201afaac-94c8-496d-fb34-e0d88880da5f"
       },
-      "execution_count": 185,
+      "execution_count": 199,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1791,7 +1687,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 185
+          "execution_count": 199
         }
       ]
     },
@@ -1807,16 +1703,16 @@
           "height": 206
         },
         "id": "ybRaT8ZMzfvO",
-        "outputId": "f7b937f9-7712-4792-a290-8bf4cc4e7a1c"
+        "outputId": "397580f3-e2c2-41fc-dc9e-ea0066e476a9"
       },
-      "execution_count": 186,
+      "execution_count": 200,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-a968d51d-1139-44a7-ae0a-56fef34139c9\">\n",
+              "  <div id=\"df-b709216a-91ed-4c04-bd24-750e6d8d4397\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1911,7 +1807,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a968d51d-1139-44a7-ae0a-56fef34139c9')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b709216a-91ed-4c04-bd24-750e6d8d4397')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1962,12 +1858,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a968d51d-1139-44a7-ae0a-56fef34139c9 button.colab-df-convert');\n",
+              "          document.querySelector('#df-b709216a-91ed-4c04-bd24-750e6d8d4397 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a968d51d-1139-44a7-ae0a-56fef34139c9');\n",
+              "          const element = document.querySelector('#df-b709216a-91ed-4c04-bd24-750e6d8d4397');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1998,7 +1894,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 186
+          "execution_count": 200
         }
       ]
     },
@@ -2020,7 +1916,7 @@
       "metadata": {
         "id": "jc52bUzXNDQn"
       },
-      "execution_count": 187,
+      "execution_count": 205,
       "outputs": []
     },
     {
@@ -2235,7 +2131,7 @@
         "X_train = X_train.drop('G3', axis='columns')\n",
         "X_test = X_test.drop('G3', axis='columns')\n",
         "lr = LinearRegression()\n",
-        "model = lr.fit(X_train, y_train)\n",
+        "lr.fit(X_train, y_train)\n",
         "print(lr.score(X_test, y_test))"
       ],
       "metadata": {
@@ -2243,9 +2139,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d25ed372-0780-46d0-f01c-9d81eea36459"
+        "outputId": "f0a46352-d46f-492c-f617-c2b517d2e569"
       },
-      "execution_count": 189,
+      "execution_count": 206,
       "outputs": [
         {
           "output_type": "stream",
